style.css
:root {
  --clr-white: 0, 0%, 100%;
  --clr-gray: 212, 45%, 89%;
  --clr-blue: 220, 15%, 55%;
  --clr-darkblue: 218, 44%, 22%;
}

/* utility classes */

.fw-1 {
  font-weight: 400;
}

.fw-2 {
  font-weight: 700;
}

*,
*::before,
*,
::after {
  box-sizing: border-box;
}

body {
  margin: 0;
  padding: 2em;

  min-height: 100vh;
  display: grid;
  place-items: center;

  background-color: hsl(var(--clr-gray));

  font-family: "Outfit", sans-serif;
}

.card {
  background-color: hsl(var(--clr-white));
  padding: 1em;

  max-width: 19em;
  border-radius: 1em;

  text-align: center;
}

.card .content-wrapper {
  max-width: 82%;
  margin: auto;
}

.card__img {
  margin-bottom: 1em;

  display: block;
  width: 100%;

  border-radius: 0.7em;
}

.card__title {
  font-size: 1.5em;
  color: hsl(var(--clr-darkblue));
}

.card__content {
  color: hsl(var(--clr-blue));
}

